0.46.0/_sources/developer/autogen_builtins_listing.rst.txt
Listings for builtins
=====================

builtins
--------

.. function:: builtins.abs


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.divmod


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.hash


   - defined by ``hash_overload(obj)`` at `numba/targets/hashing.py:61-65 <https://github.com/numba/numba/blob/master/numba/targets/hashing.py#L61-L65>`_

.. function:: builtins.iter


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.len


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``impl_len(d)`` at `numba/dictobject.py:654-664 <https://github.com/numba/numba/blob/master/numba/dictobject.py#L654-L664>`_
   - defined by ``unicode_len(s)`` at `numba/unicode.py:452-457 <https://github.com/numba/numba/blob/master/numba/unicode.py#L452-L457>`_
   - defined by ``impl_len(l)`` at `numba/listobject.py:356-364 <https://github.com/numba/numba/blob/master/numba/listobject.py#L356-L364>`_
   - defined by ``charseq_len(s)`` at `numba/charseq.py:336-357 <https://github.com/numba/numba/blob/master/numba/charseq.py#L336-L357>`_
   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.max


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_max(indval1, indval2)`` at `numba/targets/builtins.py:463-471 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L463-L471>`_
   - defined by ``iterable_max(iterable)`` at `numba/targets/builtins.py:496-498 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L496-L498>`_

.. function:: builtins.min


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``
   - defined by ``indval_min(indval1, indval2)`` at `numba/targets/builtins.py:452-460 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L452-L460>`_
   - defined by ``iterable_min(iterable)`` at `numba/targets/builtins.py:491-493 <https://github.com/numba/numba/blob/master/numba/targets/builtins.py#L491-L493>`_

.. function:: builtins.next


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.pow


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.print


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.round


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

.. function:: builtins.sorted


   - defined by ``<class 'numba.typing.templates.Registry.register_global.<locals>.decorate.<locals>.Template'>``

Not showing 28 unsupported functions.

supported = 12 / 40 = 30.00%


